--- a/Develop/index.html
+++ b/Develop/index.html
@@ -9,11 +9,9 @@
 </head>
 <!--the body-->
 <body>
-    <!---changed div to header-->
-    <header class="header">
+    <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <!---changed div to nav-->
-        <nav>
+        <div>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -25,15 +23,16 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </nav>
-    </header>
+        </div>
+    </div>
     <!---connects to section-->
     <section class="hero"></section>
 <!--changed div to section-->
     <section class="content">
         <!--changed div to article-->
         <article class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+            <!--added alt to image-->
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="pic of notebook"/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right
@@ -43,7 +42,8 @@
         </article>
         <!--changed div to article-->
         <article id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <!--added alt to image-->
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="phone and laptop" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone
@@ -53,7 +53,8 @@
         </article>
         <!--changed div to article-->
         <article id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <!--installed alt to image-->
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="team of coders" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing
@@ -65,32 +66,35 @@
     <!--changed to aside-->
     <aside class="benefits">
     <!--changed to details-->
-        <details class="benefit-lead">
+        <div class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+             <!--installed alt to image-->
+            <img src="./assets/images/lead-generation.png" alt="gear turning into money"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing
                  customers directly to your website.
             </p>
-        </details>
+        </div>
         <!--changed to details-->
-        <details class="benefit-brand">
+        <div class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+             <!--installed alt to image-->
+            <img src="./assets/images/brand-awareness.png" alt="light is on" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking
                  and visibility for your business.
             </p>
-        </details>
+        </div>
         <!--changed to details-->
-        <details class="benefit-cost">
+        <div class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" />
+             <!--installed alt to image-->
+            <img src="./assets/images/cost-management.png" alt="coins with money symbol" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you
                  no longer need to advertise your page.
             </p>
-        </details>
+        </div>
     </aside>
     <!--changed to footer-->
     <footer class="footer">
