--- a/Develop/index.html
+++ b/Develop/index.html
@@ -9,7 +9,8 @@
 </head>
 <!--the body-->
 <body>
-    <div class="header">
+    <!--changed div to header-->
+    <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
@@ -24,13 +25,13 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </header>
     <!---connects to section-->
     <section class="hero"></section>
 <!--changed div to section-->
     <section class="content">
         <!--changed div to article-->
-        <article class="search-engine-optimization">
+        <article id="search-engine-optimization" class="info">
             <!--added alt to image-->
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="pic of notebook"/>
             <h2>Search Engine Optimization</h2>
@@ -41,7 +42,7 @@
             </p>
         </article>
         <!--changed div to article-->
-        <article id="online-reputation-management" class="online-reputation-management">
+        <article id="online-reputation-management" class="info">
             <!--added alt to image-->
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="phone and laptop" />
             <h2>Online Reputation Management</h2>
@@ -52,7 +53,7 @@
             </p>
         </article>
         <!--changed div to article-->
-        <article id="social-media-marketing" class="social-media-marketing">
+        <article id="social-media-marketing" class="info">
             <!--installed alt to image-->
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="team of coders" />
             <h2>Social Media Marketing</h2>
