--- a/Develop/index.html
+++ b/Develop/index.html
@@ -12,7 +12,8 @@
     <!--changed div to header-->
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <!--changed div to nav--> 
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -24,13 +25,13 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
+        </nav>
     </header>
     <!---connects to section-->
     <section class="hero"></section>
 <!--changed div to section-->
     <section class="content">
-        <!--changed div to article-->
+        <!--changed div to article and added class-->
         <article id="search-engine-optimization" class="info">
             <!--added alt to image-->
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="pic of notebook"/>
@@ -97,8 +98,8 @@
             </p>
         </div>
     </aside>
-    <!--changed to footer-->
-    <footer class="footer">
+    <!--changed to footer and removed id-->
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
